Fix Safari horizontal scrolling
From testing, I found that Safari had a 16px horizontal scroll. Took me a while
to isolate what was causing it. Along the way, I worked out a bunch of nice
tweaks that make the mobile layout better.

--- a/src/app/components/threadList.module.css
+++ b/src/app/components/threadList.module.css
@@ -4,6 +4,6 @@
 
 @media (max-width: 1024px) {
   .container {
-    max-width: calc(100vw - 76px);
+    max-width: calc(100vw - 76px - 16px); /* left and right padding */
   }
 }
